0.7 (unreleased)
================

- Refactored working set computation to achieve better
  performances [Simone Deponti]


0.6.1 (2010-07-22)
==================

- Fixed encoding bug. [Simone Deponti]


0.6 (2010-07-20)
================

- Added new mail settings, restructured defaults. [Simone Deponti]

- Added support for multiple databases and new-style database settings.
  [Simone Deponti]

- Fixed bugs in the tests and documentation. [Simone Deponti]


0.5.1 (2010-06-07)
==================

- Made the wsgi module more paster-compatible


0.5 (2010-06-03)
================

.. note:: This release is potentially backwards-incompatible: ``media-url`` and
          ``media-directory`` are now named ``static-url`` and
          ``static-directory`` respectively.

- Fixed MEDIA_URL mess [Simone Deponti]

- Added INTERNAL_IPS support [Simone Deponti]

- No defaults for middleware, template loaders and apps [Simone Deponti]


0.3.2 (2010-06-01)
==================

- Fixed WSGI support (uwsgi, custom loggers) [Simone Deponti]

- Fixed import bugs [Simone Deponti]

0.3.1 (2010-05-19)
==================

aka "Never release between midnight and 6am":

- Fixed absolute path bug for fixture dirs in default template [Simone Deponti]

- Fixed small template extension bug [Simone Deponti]

0.3 (2010-05-19)
================

- Added multiple media-origin support [Simone Deponti]

- Added fixture-dirs support [Simone Deponti]


0.2 (2010-05-17)
================

- First public release [Simone Deponti]

0.1 (2010-04-22)
================

- Created package [Simone Deponti]